// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form snapshot 1 1`] = `
<div
  className={null}
  style={Object {}}
>
  <div
    className=""
    style={Object {}}
  >
    <label
      style={Object {}}
    >
      LABEL
    </label>
    <p>
      Text above
    </p>
    <input
      name="foo.bar"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyPress={[Function]}
      readOnly={false}
      style={Object {}}
      type="text"
      value="TEST VALUE"
    />
    <p>
      Text below
    </p>
  </div>
</div>
`;

exports[`form snapshot 2 - complex nesting 1`] = `
<div
  className={null}
  style={Object {}}
>
  <div
    className=""
    style={Object {}}
  >
    <label
      style={Object {}}
    >
      TYPE LABEL
    </label>
    <p>
      Text above
    </p>
    <input
      name="type"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyPress={[Function]}
      readOnly={false}
      style={Object {}}
      type="text"
      value="monkey"
    />
    <p>
      Text below
    </p>
  </div>
  <div
    className="form-section"
  >
    <h2>
      Inner Form
    </h2>
    <div
      className={null}
      style={Object {}}
    >
      <div
        className=""
        style={Object {}}
      >
        <label
          style={Object {}}
        >
          FOOBAR LABEL
        </label>
        <p>
          Text above
        </p>
        <input
          name="bar"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          readOnly={false}
          style={Object {}}
          type="text"
          value="TEST VALUE"
        />
        <p>
          Text below
        </p>
      </div>
      <div
        className=""
        style={Object {}}
      >
        <label
          style={Object {}}
        >
          BIP LABEL
        </label>
        <p>
          Text above
        </p>
        <input
          name="bip"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          readOnly={false}
          style={Object {}}
          type="text"
          value=""
        />
        <p>
          Text below
        </p>
      </div>
    </div>
  </div>
</div>
`;
